@@ -1,5 +1,15 @@
 2009-08-23  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
+	Extend test suite.
+
+	* tools/tests/8_funs/f10.c,
+	* tools/tests/8_funs/jumps.c: New.
+
+	* tools/tests/9_manyregs/genmany.c: New.
+	* tools/tests/mkalltests.sh: Use it.
+
+2009-08-23  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
 	Homogeneize test suite.
 
 	* tools/tests/1_create/x_extcreate2.sl: Rename to...	
